--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -49,13 +49,12 @@
 					<ul>
 						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
-						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">twitter.com/{{ site.author.twitter }}</a></li>
-						<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li>
+						<li class="微博"><a href="http://weibo.com/{{ site.author.weibo }}/" rel="me">weibo.com/{{ site.author.weibo }}</a></li>
 					</ul>
 				</div><!-- misc -->
 				<p class="licence">
-					Theme: <a href="http://layouts-the.me">the_minimum</a> based on <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>.<br>
-					Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.
+					致谢: 感谢 <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>提供的模板.<br>
+					本博客内容欢迎转载，请注明出处.
 				</p>
 			</div><!-- unit-foot-inner -->
 		</div><!-- unit-foot -->
