--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -45,7 +45,8 @@
 				<div class="misc vcard">
 					<h4>about</h4>
 					<ul>
-						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
+						<li class="contact"><span class="author fn n">{{ site.author.name }}</li>
+						<li class="fn email"><address>{{ site.author.email }}</address></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
 						<li class="weibo"><a href="http://weibo.com/{{ site.author.weibo }}/" rel="me">weibo.com/{{ site.author.weibo }}</a></li>
 					</ul>
