--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -37,8 +37,6 @@
 			<div class="unit-inner unit-body-inner">
 				<div class="entry-content">
 					{{ content }}
-					
-					© 2014 [Yuan Xiaoyong] All rights reserved.
 				</div>
 			</div><!-- unit-inner -->
 		</div><!-- unit-body -->
@@ -53,6 +51,9 @@
 						<li class="fn email"><address>{{ site.author.email }}</address></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
 						<li class="weibo"><a href="http://weibo.com/{{ site.author.weibo }}/" rel="me">weibo.com/{{ site.author.weibo }}</a></li>
+					</ul>
+					<ul>
+						<li>© 2014 [Brian Yuan](http://weibo.com/chbrian) All rights reserved.</li>
 					</ul>
 				</div><!-- misc -->
 			</div><!-- unit-foot-inner -->
