--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -53,7 +53,7 @@
 						<li class="weibo"><a href="http://weibo.com/{{ site.author.weibo }}/" rel="me">weibo.com/{{ site.author.weibo }}</a></li>
 					</ul>
 					<ul>
-						<li>© 2014 [Brian Yuan](http://weibo.com/chbrian) All rights reserved.</li>
+						<li> Copyright ©2014 XiaoYong Yuan, All Rights Reserved.</li>
 					</ul>
 				</div><!-- misc -->
 			</div><!-- unit-foot-inner -->
