--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -39,6 +39,8 @@
 					{{ content }}
 				</div>
 			</div><!-- unit-inner -->
+			
+			Copyright ©2014 XiaoYong Yuan, All Rights Reserved.
 		</div><!-- unit-body -->
 	</div><!-- body -->
 	<footer class="the-footer">
@@ -51,9 +53,6 @@
 						<li class="fn email"><address>{{ site.author.email }}</address></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
 						<li class="weibo"><a href="http://weibo.com/{{ site.author.weibo }}/" rel="me">weibo.com/{{ site.author.weibo }}</a></li>
-					</ul>
-					<ul>
-						<li> Copyright ©2014 XiaoYong Yuan, All Rights Reserved.</li>
 					</ul>
 				</div><!-- misc -->
 			</div><!-- unit-foot-inner -->
@@ -78,6 +77,5 @@
 </script>
   
   {% include JB/analytics %}
-  
 </body>
 </html>
