--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -51,6 +51,7 @@
 					<ul>
 						<li class="contact"><span class="author fn n">{{ site.author.name }}</li>
 						<li class="fn email"><address>{{ site.author.email }}</address></li>
+						<li class="contact"><a href="http://cise.ufl.edu/~xiaoyong/">cise.ufl.edu/~xiaoyong</a></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
 						<li class="weibo"><a href="http://weibo.com/{{ site.author.weibo }}/" rel="me">weibo.com/{{ site.author.weibo }}</a></li>
 					</ul>
